# StockHound

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  cache.db  main.cpp
API/: PolygonAPI.cpp  PolygonAPI.h
Analysis/: PriceValidator.cpp  PriceValidator.h  StockAnalysis.cpp  StockAnalysis.h
